# twitter-stream-bot-data-gatherer

./: README.md  dockerfile  pyproject.toml  requirements.txt
twitter-stream-bot-data-gatherer/: main.py
twitter-stream-bot-detection/: main.py
